Security initialisation Creation registration, login and logout Add link of new pages in navbar

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-
+<h1 class="text-center">Bonjour {% if currentUser is null %} Inconnue {% else %} {{ currentUser.username | capitalize }} {% endif %}</h1>
 <div class="container">
 	<h2>Liste des voitures</h2>
 
