--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,9 @@
                 <a class="nav-item nav-link active" href="{{path('app_app')}}" aria-current="page">Accueil <span class="visually-hidden">(current)</span></a>
                 <a class="nav-item nav-link" href="{{path('app_brand_index')}}">Marque</a>
                 <a class="nav-item nav-link" href="{{path('app_car_index')}}">Voiture</a>
+                <a class="nav-item nav-link" href="{{path('app_login')}}">Se connecter</a>
+                <a class="nav-item nav-link" href="{{path('app_register')}}">Créer un compte</a>
+                <a class="nav-item nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
             </div>
         </nav>
         {% block body %}{% endblock %}
