--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
                 <a class="nav-item nav-link" href="{{path('app_login')}}">Se connecter</a>
                 <a class="nav-item nav-link" href="{{path('app_register')}}">Créer un compte</a>
                 <a class="nav-item nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
+                <a class="nav-item nav-link" href="{{path('admin')}}">Administration</a>
             </div>
         </nav>
         {% block body %}{% endblock %}
