--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        {% endblock %}
-    </head>
-    <body>
-        <nav class="navbar navbar-expand navbar-light bg-light">
-            <div class="nav navbar-nav">
-                <a class="nav-item nav-link active" href="{{path('app_app')}}" aria-current="page">Accueil <span class="visually-hidden">(current)</span></a>
-                <a class="nav-item nav-link" href="{{path('app_brand_index')}}">Marque</a>
-                <a class="nav-item nav-link" href="{{path('app_car_index')}}">Voiture</a>
-                <a class="nav-item nav-link" href="{{path('app_login')}}">Se connecter</a>
-                <a class="nav-item nav-link" href="{{path('app_register')}}">Créer un compte</a>
-                <a class="nav-item nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
-                <a class="nav-item nav-link" href="{{path('admin')}}">Administration</a>
-            </div>
-        </nav>
-        {% block body %}{% endblock %}
-        {% block javascripts %}
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-        {% endblock %}
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		{% block stylesheets %}
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		{% endblock %}
+	</head>
+	<body>
+		<nav class="navbar navbar-expand navbar-light bg-light">
+			<div class="nav navbar-nav">
+				<a class="nav-item nav-link active" href="{{path('app_app')}}" aria-current="page">Accueil
+					<span class="visually-hidden">(current)</span>
+				</a>
+				<a class="nav-item nav-link" href="{{path('app_brand_index')}}">Marque</a>
+				<a class="nav-item nav-link" href="{{path('app_car_index')}}">Voiture</a>
+				<a class="nav-item nav-link" href="{{path('app_login')}}">Se connecter</a>
+				<a class="nav-item nav-link" href="{{path('app_register')}}">Créer un compte</a>
+				<a class="nav-item nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
+				<a class="nav-item nav-link" href="{{path('admin')}}">Administration</a>
+			</div>
+		</nav>
+		{% block body %}
+			{% block javascripts %}
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+			{% endblock %}
+		{% endblock %}
+	</body>
 </html>
