--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -4,32 +4,37 @@
 {% endblock %}
 
 {% block body %}
-<h1 class="text-center">Bonjour {% if currentUser is null %} Inconnue {% else %} {{ currentUser.username | capitalize }} {% endif %}</h1>
-<div class="container">
-	<h2>Liste des voitures</h2>
+	<h1 class="text-center">Bonjour
+		{% if currentUser is null %}
+			Inconnue
+		{% else %}
+			{{ currentUser.username | capitalize }}
+		{% endif %}
+	</h1>
+	<div class="container">
+		<h2>Liste des voitures</h2>
 
-	<div class="table-responsive">
-		<table class="table table-light">
-			<thead>
-				<tr>
-					<th scope="col">Modèle</th>
-					<th scope="col">Marque</th>
-					<th scope="col">Date</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for car in cars %}
-					
-				<tr>
-					<td>{{car.model}}</td>
-					<td>{{car.brand.name}}</td>
-					<td>{{car.dateOfCreation | date("d/m/Y")}}</td>
-				</tr>
-				{% endfor %}
-			</tbody>
-		</table>
+		<div class="table-responsive">
+			<table class="table table-light">
+				<thead>
+					<tr>
+						<th scope="col">Modèle</th>
+						<th scope="col">Marque</th>
+						<th scope="col">Date</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for car in cars %}
+
+						<tr>
+							<td>{{car.model}}</td>
+							<td>{{car.brand.name}}</td>
+							<td>{{car.dateOfCreation | date("d/m/Y")}}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
 	</div>
-	</div>
 
-
-{% endblock %} 
+{% endblock %}
