--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,9 +6,10 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		{% block stylesheets %}
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		{% endblock %}
+
+		{% block stylesheets %}{% endblock %}
+		{{encore_entry_link_tags('app')}}
+
 	</head>
 	<body>
 		<nav class="navbar navbar-expand navbar-light bg-light">
@@ -25,9 +26,10 @@
 			</div>
 		</nav>
 		{% block body %}
-			{% block javascripts %}
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-			{% endblock %}
+			{% block javascripts %}{% endblock %}
+
 		{% endblock %}
+		{{encore_entry_script_tags('app')}}
+
 	</body>
 </html>
