--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
 				<a class="nav-item nav-link" href="{{path('app_register')}}">Créer un compte</a>
 				<a class="nav-item nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
 				<a class="nav-item nav-link" href="{{path('admin')}}">Administration</a>
+				<a class="nav-item nav-link" href="{{path('app_publication_index')}}">Blog</a>
 			</div>
 		</nav>
 		{% block body %}
