--- a/templates/publication/_delete_form.html.twig
+++ b/templates/publication/_delete_form.html.twig
@@ -1,6 +1,6 @@
 {% if publication.user.id == app.user.id %}
-	<form method="post" action="{{ path('app_publication_delete', {'id': publication.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+	<form method="post" class="d-inline" action="{{ path('app_publication_delete', {'id': publication.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer la publication ?');">
 		<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ publication.id) }}">
-		<button class="btn">Delete</button>
+		<button class="btn btn-outline-danger">Supprimer</button>
 	</form>
 {% endif %}
