--- a/templates/publication/_form.html.twig
+++ b/templates/publication/_form.html.twig
@@ -1,4 +1,8 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="container">
+	<div class="jumbotron">
+		{{ form_start(form) }}
+		{{ form_widget(form.content) }}
+		{{ form_widget(form.save, { label : submit_label } )}}
+		{{ form_end(form) }}
+	</div>
+</div>
