--- a/templates/publication/edit.html.twig
+++ b/templates/publication/edit.html.twig
@@ -1,13 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Publication{% endblock %}
+{% set title = 'Modifier la publication' %}
 
 {% block body %}
-    <h1>Edit Publication</h1>
 
-    {{ include('publication/_form.html.twig', {'button_label': 'Update'}) }}
+	{% include 'publication/_form.html.twig' with {submit_label : 'Modifier'} %}
 
-    <a href="{{ path('app_publication_index') }}">back to list</a>
-
-    {{ include('publication/_delete_form.html.twig') }}
 {% endblock %}
