--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,16 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil
-{% endblock %}
+{% set title = 'Accueil' %}
 
 {% block body %}
-	<h1 class="text-center">Bonjour
-		{% if currentUser is null %}
-			Inconnue
-		{% else %}
-			{{ currentUser.username | capitalize }}
-		{% endif %}
-	</h1>
 	<div class="container">
 		<h2>Liste des voitures</h2>
 
